--- a/web/templates/Home.html
+++ b/web/templates/Home.html
@@ -21,7 +21,7 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <form class="mt-3" action="/note/save" method="post">
+    <form id="saveForm" class="mt-3" method="post">
         <div class="form-group">
             <label for="noteTitle">Заголовок:</label>
             <input type="text" class="form-control" id="noteTitle" name="note-title" placeholder="Введите заголовок">
@@ -31,10 +31,46 @@
             <textarea class="form-control" id="noteInput" rows="3" name="note-text" placeholder="Введите текст заметки"></textarea>
         </div>
         <div class="mt-2">
-            <button type="submit" class="btn btn-primary">Сохранить</button>
+            <button type="submit" class="btn btn-primary" id="btn-save">Сохранить</button>
             <button type="submit" class="btn btn-danger">Удалить</button>
         </div>
     </form>
 </div>
 </body>
 
+<script>
+
+    let btnSave = document.querySelector("#btn-save")
+    btnSave.addEventListener("click", function (){
+        sendAjaxRequest()
+    })
+    function sendAjaxRequest() {
+        let noteTitle = document.querySelector('[name="note-title"]').value;
+        let noteText = document.querySelector('[name="note-text"]').value;
+
+        fetch("/note/save", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ "Title": noteTitle, "Text": noteText })
+        })
+            // Получение ответа и проверка.
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Ошибка получения Json от сервера');
+                }
+                return response.json();
+            })
+            // Обработка полученных данных
+            .then(data => {
+            alert(data.message);
+        })
+            // Проверка на ошибки
+            .catch(error => {
+                // Обработка ошибок
+                console.error("Error:", error);
+                alert("Error: " + error.message);
+            });
+    }
+</script>
